fix(OnCallController): 불변 객체 변환 수정